--- a/src/style.css
+++ b/src/style.css
@@ -1,99 +1,153 @@
-*{
-    font-family: 'Star Wars', sans-serif;
+* {
+  font-family: "Star Wars", sans-serif;
+  margin: 0;
+  color: #333333;
+  box-sizing: border-box;
 }
 
 body {
-    background-image: url(https://i.pinimg.com/564x/12/dc/29/12dc29241535c318712d951e97e6d283.jpg);
-    align-items: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(https://i.pinimg.com/564x/12/dc/29/12dc29241535c318712d951e97e6d283.jpg);
+  margin: 1rem;
 }
 
 header {
-    display: flex;
-    background-color: #333333;
-    width: 100%;
-    height: 120px;
-    align-items: center;
-    border-radius: 40px;
+  display: flex;
+  margin: 1rem;
+  padding-left: 4rem;
+  background-color: #333333c7;
+  height: 120px;
+  align-items: center;
+  border-radius: 20px 0;
 }
 
 h1 {
-    color: #d7d700;
-    margin-left: 50px;
-    font-size: 50px; ;
+  color: #d7d700;
+  font-size: 50px;
+  letter-spacing: 3px;
 }
 
 main {
-    background-color: #d7d700;
-    width: 100%;
-    height: 100px;
-    border-radius: 20px;
-    align-items: center;
-    }
+  margin: 1rem;
+  padding: 1rem 0rem 1rem 2rem;
+  border-radius: 20px 0;
+  line-height: 2rem;
+  letter-spacing: 2px;
 
-h2 {
-    margin-left: 20px;
-    margin-top: 50px;
-    padding: 10px;
-    color: #0b0b0b;
-    font-weight: lighter;
+  background: rgb(189, 189, 189);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(249, 99, 86, 1) 0%,
+    rgba(168, 205, 226, 1) 48%,
+    rgba(149, 236, 62, 1) 100%
+  );
+  background-size: 300% 100%;
+  animation: gradient 15s ease infinite;
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+.filters {
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.filters label {
+  background-color: #d7d700;
+  padding: 1rem 0 1rem 1rem;
+  border-radius: 10px 0 0 0;
+}
+.filters select {
+  background-color: #d7d700;
+  padding: 1rem 1rem 1rem 0;
+  border: none;
+  outline: none;
+  border-radius: 0 0 10px 0;
+  line-height: 1rem;
+}
+.filters option {
+  height: 20px;
+  font-size: 20px;
+}
+.buttons {
+  display: flex;
+  flex-direction: column;
+  height: 6rem;
+  justify-content: space-evenly;
+}
+.buttons #applyFilter,
+#clearFilter {
+  height: 35px;
+  width: 8rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #ebebeb;
+}
+#applyFilter:hover {
+  background-color: rgb(78, 214, 44);
+  color: white;
 }
 
-h4{
-    margin-left: 30px;
-    color: rgb(38, 36, 34);
-}
-
-select[name="filterBy"]:hover {
-    background-color: #cd2504;
-    color: #f5f3f3;
-}
-
-select[name="sortBy"]:hover {
-    background-color: #cd2504;
-    color: #f4efef;
-}
-
-button[id="applyFilter"]:hover{
-    background-color: rgb(26, 228, 83);
-    color: white;        
-}
-
-
-button[id="clearFilter"]:hover{
-    background-color: rgb(37, 23, 244);
-    color: white;        
+#clearFilter:hover {
+  background-color: rgb(23, 75, 244);
+  color: white;
 }
 
 .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px,1fr));
-    padding: 20px;
-    grid-gap: 40px;
-    
-}   
-
-.container{
-    display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  padding: 20px;
+  grid-gap: 40px;
 }
-.card{
-    flex: 30%;
-    background-color: #e1e2db; opacity: 80%;
-    border-radius: 50px;
-     
+.cardsBox ul {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-evenly;
+  padding: 0;
 }
-
-.card .content{
-    flex-grow: 1;
-    flex-shrink: 1;
+.cardsBox .textCard {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  line-height: 23px;
 }
-
+.card {
+  background-color: #ebebeb98;
+  border-radius: 10px 0;
+  width: 20rem;
+  height: auto;
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 2rem;
+}
+.card img {
+  width: 15rem;
+  height: 15rem;
+  border: 2px solid rgb(104, 1, 1);
+  padding: 4px;
+  border-radius: 50%;
+  margin: 1rem;
+}
 footer {
-    display: flex;
-    height: 50px;
-    width: 100%;
-    font-size: 15px;
-    background-color: #1abb12;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-  }
+  display: flex;
+  font-size: 15px;
+  justify-content: center;
+}
+a {
+  color: #ebebeb;
+}
