--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,9 @@
 * {
-  font-family: "Star Wars", sans-serif;
+  font-family: "Passero One", sans-serif;
+  font-family: "Passion One", sans-serif;
   margin: 0;
-  color: #333333;
   box-sizing: border-box;
+  font-size: 20px;
 }
 
 body {
@@ -16,14 +17,17 @@ header {
   margin: 1rem;
   padding-left: 4rem;
   background-color: #333333c7;
-  height: 120px;
+  height: 8rem;
   align-items: center;
   border-radius: 20px 0;
+  justify-content: space-between;
 }
-
+header .icon {
+  display: none;
+}
 h1 {
   color: #d7d700;
-  font-size: 50px;
+  font-size: 4rem !important;
   letter-spacing: 3px;
 }
 
@@ -56,6 +60,10 @@ main {
     background-position: 0% 50%;
   }
 }
+h2 {
+  font-size: 30px !important;
+  letter-spacing: 5px;
+}
 .filters {
   margin: 1rem;
   padding: 1rem;
@@ -63,22 +71,29 @@ main {
   align-items: center;
   justify-content: space-evenly;
 }
+
 .filters label {
   background-color: #d7d700;
-  padding: 1rem 0 1rem 1rem;
+  padding: 20px 0 20px 20px;
   border-radius: 10px 0 0 0;
+  font-size: 18px !important;
 }
 .filters select {
   background-color: #d7d700;
-  padding: 1rem 1rem 1rem 0;
+  padding: 19px 19px 19px 5px;
   border: none;
   outline: none;
   border-radius: 0 0 10px 0;
   line-height: 1rem;
+  width: 10rem;
+  font-size: 18px !important;
+}
+.filters option:nth-child(1) {
+  text-align: center;
 }
 .filters option {
   height: 20px;
-  font-size: 20px;
+  /*  font-size: 20px; */
 }
 .buttons {
   display: flex;
@@ -88,8 +103,9 @@ main {
 }
 .buttons #applyFilter,
 #clearFilter {
+  /* font-size: 20px;*/
   height: 35px;
-  width: 8rem;
+  width: 6rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -117,6 +133,7 @@ main {
   width: 100%;
   justify-content: space-evenly;
   padding: 0;
+  gap: 1rem;
 }
 .cardsBox .textCard {
   display: flex;
@@ -126,14 +143,15 @@ main {
 }
 .card {
   background-color: #ebebeb98;
-  border-radius: 10px 0;
+  border-radius: 50px 0;
   width: 20rem;
   height: auto;
   margin-bottom: 2rem;
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding: 2rem;
+  padding: 1rem 2rem 2rem 2rem;
+  /*  font-size: 20px;*/
 }
 .card img {
   width: 15rem;
@@ -145,9 +163,32 @@ main {
 }
 footer {
   display: flex;
-  font-size: 15px;
+  /* font-size: 20px;*/
+  letter-spacing: 3px;
   justify-content: center;
 }
 a {
   color: #ebebeb;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 1180px) and (min-width: 600px) {
+  header .icon {
+    display: flex;
+    width: 2rem;
+    height: 2rem;
+    margin-right: 4rem;
+  }
+  .card {
+    display: flex;
+    width: 37rem;
+    flex-direction: row;
+  }
+  .card img {
+    width: 10rem;
+    height: 10rem;
+  }
+  .filters {
+    display: none;
+  }
 }
